<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadingEdgeLength="0dp"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:scrollbars="none">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/linearLayoutStyle">

        <com.skyfishjy.library.RippleBackground
            android:id="@+id/animation"
            android:layout_width="match_parent"
            android:layout_height="169dp"
            android:layout_weight="0.54"
            app:rb_color="#cacfd1"
            app:rb_duration="3000"
            app:rb_radius="32dp"
            app:rb_rippleAmount="4"
            app:rb_scale="6">

            <ImageView
                android:id="@+id/nfcIcon"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_centerInParent="true"
                android:src="@drawable/nfc_icon_pay" />

            <TextView
                android:id="@+id/nfcMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nfcIcon"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:text="@string/nfc_msg"
                android:textAlignment="center" />

        </com.skyfishjy.library.RippleBackground>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/stroke_top"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/default_margin_item_separator"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/cameraIcon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/ic_camera_alt_24"
                    android:backgroundTint="@color/link_blue" />

                <TextView
                    android:id="@+id/cardCameraScan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/scan_card_link"
                    android:textSize="18dp" />

            </LinearLayout>

            <com.braintreepayments.cardform.view.CardForm
                android:id="@+id/cardForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/bt_margin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin_item_separator"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCancel"
                    style="@style/btnRadiusWhite"
                    android:layout_width="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/border_radius_dark_grey"
                    android:text="@string/cancel"
                    android:textColor="@color/main_darkgrey" />

                <Button
                    android:id="@+id/cardSubmitBtn"
                    style="@style/btnRadiusWhite"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/border_radius_blue"
                    android:text="@string/submit" />

            </LinearLayout>

            <TextView
                android:id="@+id/cardSupportedCards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/default_margin_item_separator"
                android:text="@string/banks_cards_supported" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>